--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird Game</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/flappy.css">
 </head>
 <body class="content">
     <h1>Flappy Bird Game</h1>
-    
+    <div wm-flappy>
+        <img src="./img/bird.png" alt="bird" class="bird">
+
+        <div class="pair-of-pipes">
+            <div class="pipe">
+                <div class="body-pipe"></div>
+                <div class="border-pipe"></div>
+            </div>
+
+            <div class="pipe">
+                <div class="body-pipe"></div>
+                <div class="border-pipe"></div>
+            </div>
+        </div>
+    </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
