font updated + new red bird png

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <div class="border-pipe"></div>
             </div>
         </div>
+
+        <div class="progress">100</div>
     </div>
     <script src="./js/script.js"></script>
 </body>
