added function pair-of-barriers, random gap and setX

--- a/index.html
+++ b/index.html
@@ -10,23 +10,7 @@
 </head>
 <body class="content">
     <h1>Flappy Bird Game</h1>
-    <div wm-flappy>
-        <img src="./img/bird.png" alt="bird" class="bird">
-
-        <div class="pair-of-pipes">
-            <div class="pipe">
-                <div class="body-pipe"></div>
-                <div class="border-pipe"></div>
-            </div>
-
-            <div class="pipe">
-                <div class="body-pipe"></div>
-                <div class="border-pipe"></div>
-            </div>
-        </div>
-
-        <div class="progress">100</div>
-    </div>
+    <div wm-flappy></div>
     <script src="./js/script.js"></script>
 </body>
 </html>
